m2 config service
